@@ -16,16 +16,17 @@
  */
 package org.apache.kafka.streams.state.internals;
 
+import org.apache.kafka.common.IsolationLevel;
 import org.apache.kafka.common.header.Header;
 import org.apache.kafka.common.header.internals.RecordHeaders;
 import org.apache.kafka.common.metrics.Metrics;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.utils.Bytes;
-import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.internals.ByteUtils;
+import org.apache.kafka.common.utils.internals.LogContext;
 import org.apache.kafka.streams.KeyValue;
 import org.apache.kafka.streams.StreamsConfig;
 import org.apache.kafka.streams.StreamsConfig.InternalConfig;
@@ -37,6 +38,7 @@ import org.apache.kafka.streams.processor.internals.metrics.StreamsMetricsImpl;
 import org.apache.kafka.streams.query.Position;
 import org.apache.kafka.streams.state.KeyValueIterator;
 import org.apache.kafka.streams.state.KeyValueStore;
+import org.apache.kafka.streams.state.ReadOnlyKeyValueStore;
 import org.apache.kafka.test.InternalMockProcessorContext;
 import org.apache.kafka.test.MockRecordCollector;
 import org.apache.kafka.test.TestUtils;
@@ -57,12 +59,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.notNullValue;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.hasEntry;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -123,72 +125,72 @@ public class ChangeLoggingKeyValueBytesStoreTest {
     @Test
     public void shouldWriteKeyValueBytesToInnerStoreOnPut() {
         store.put(hi, there);
-        assertThat(inner.get(hi), equalTo(there));
-        assertThat(collector.collected().size(), equalTo(1));
-        assertThat(collector.collected().get(0).key(), equalTo(hi));
-        assertThat(collector.collected().get(0).value(), equalTo(there));
+        assertArrayEquals(there, inner.get(hi));
+        assertEquals(1, collector.collected().size());
+        assertEquals(hi, collector.collected().get(0).key());
+        assertArrayEquals(there, (byte[]) collector.collected().get(0).value());
     }
 
     @Test
     public void shouldWriteAllKeyValueToInnerStoreOnPutAll() {
         store.putAll(Arrays.asList(KeyValue.pair(hi, there),
                                    KeyValue.pair(hello, world)));
-        assertThat(inner.get(hi), equalTo(there));
-        assertThat(inner.get(hello), equalTo(world));
+        assertArrayEquals(there, inner.get(hi));
+        assertArrayEquals(world, inner.get(hello));
 
-        assertThat(collector.collected().size(), equalTo(2));
-        assertThat(collector.collected().get(0).key(), equalTo(hi));
-        assertThat(collector.collected().get(0).value(), equalTo(there));
-        assertThat(collector.collected().get(1).key(), equalTo(hello));
-        assertThat(collector.collected().get(1).value(), equalTo(world));
+        assertEquals(2, collector.collected().size());
+        assertEquals(hi, collector.collected().get(0).key());
+        assertArrayEquals(there, (byte[]) collector.collected().get(0).value());
+        assertEquals(hello, collector.collected().get(1).key());
+        assertArrayEquals(world, (byte[]) collector.collected().get(1).value());
     }
 
     @Test
     public void shouldPropagateDelete() {
         store.put(hi, there);
         store.delete(hi);
-        assertThat(inner.approximateNumEntries(), equalTo(0L));
-        assertThat(inner.get(hi), nullValue());
+        assertEquals(0L, inner.approximateNumEntries());
+        assertNull(inner.get(hi));
     }
 
     @Test
     public void shouldReturnOldValueOnDelete() {
         store.put(hi, there);
-        assertThat(store.delete(hi), equalTo(there));
+        assertArrayEquals(there, store.delete(hi));
     }
 
     @Test
     public void shouldLogKeyNullOnDelete() {
         store.put(hi, there);
-        assertThat(store.delete(hi), equalTo(there));
+        assertArrayEquals(there, store.delete(hi));
 
-        assertThat(collector.collected().size(), equalTo(2));
-        assertThat(collector.collected().get(0).key(), equalTo(hi));
-        assertThat(collector.collected().get(0).value(), equalTo(there));
-        assertThat(collector.collected().get(1).key(), equalTo(hi));
-        assertThat(collector.collected().get(1).value(), nullValue());
+        assertEquals(2, collector.collected().size());
+        assertEquals(hi, collector.collected().get(0).key());
+        assertArrayEquals(there, (byte[]) collector.collected().get(0).value());
+        assertEquals(hi, collector.collected().get(1).key());
+        assertNull(collector.collected().get(1).value());
     }
 
     @Test
     public void shouldWriteToInnerOnPutIfAbsentNoPreviousValue() {
         store.putIfAbsent(hi, there);
-        assertThat(inner.get(hi), equalTo(there));
+        assertArrayEquals(there, inner.get(hi));
     }
 
     @Test
     public void shouldNotWriteToInnerOnPutIfAbsentWhenValueForKeyExists() {
         store.put(hi, there);
         store.putIfAbsent(hi, world);
-        assertThat(inner.get(hi), equalTo(there));
+        assertArrayEquals(there, inner.get(hi));
     }
 
     @Test
     public void shouldWriteToChangelogOnPutIfAbsentWhenNoPreviousValue() {
         store.putIfAbsent(hi, there);
 
-        assertThat(collector.collected().size(), equalTo(1));
-        assertThat(collector.collected().get(0).key(), equalTo(hi));
-        assertThat(collector.collected().get(0).value(), equalTo(there));
+        assertEquals(1, collector.collected().size());
+        assertEquals(hi, collector.collected().get(0).key());
+        assertArrayEquals(there, (byte[]) collector.collected().get(0).value());
     }
 
     @Test
@@ -196,26 +198,26 @@ public class ChangeLoggingKeyValueBytesStoreTest {
         store.put(hi, there);
         store.putIfAbsent(hi, world);
 
-        assertThat(collector.collected().size(), equalTo(1));
-        assertThat(collector.collected().get(0).key(), equalTo(hi));
-        assertThat(collector.collected().get(0).value(), equalTo(there));
+        assertEquals(1, collector.collected().size());
+        assertEquals(hi, collector.collected().get(0).key());
+        assertArrayEquals(there, (byte[]) collector.collected().get(0).value());
     }
 
     @Test
     public void shouldReturnCurrentValueOnPutIfAbsent() {
         store.put(hi, there);
-        assertThat(store.putIfAbsent(hi, world), equalTo(there));
+        assertArrayEquals(there, store.putIfAbsent(hi, world));
     }
 
     @Test
     public void shouldReturnNullOnPutIfAbsentWhenNoPreviousValue() {
-        assertThat(store.putIfAbsent(hi, there), is(nullValue()));
+        assertNull(store.putIfAbsent(hi, there));
     }
 
     @Test
     public void shouldReturnValueOnGetWhenExists() {
         store.put(hello, world);
-        assertThat(store.get(hello), equalTo(world));
+        assertArrayEquals(world, store.get(hello));
     }
 
     @Test
@@ -236,14 +238,14 @@ public class ChangeLoggingKeyValueBytesStoreTest {
             }
         }
 
-        assertThat(numberOfKeysReturned, is(1));
-        assertThat(keys, is(Collections.singletonList(hi)));
-        assertThat(values, is(Collections.singletonList(Bytes.wrap(there))));
+        assertEquals(1, numberOfKeysReturned);
+        assertEquals(List.of(hi), keys);
+        assertEquals(List.of(Bytes.wrap(there)), values);
     }
 
     @Test
     public void shouldReturnNullOnGetWhenDoesntExist() {
-        assertThat(store.get(hello), is(nullValue()));
+        assertNull(store.get(hello));
     }
 
     @Test
@@ -251,17 +253,41 @@ public class ChangeLoggingKeyValueBytesStoreTest {
         context.setRecordContext(new ProcessorRecordContext(-1, INPUT_OFFSET, INPUT_PARTITION, INPUT_TOPIC_NAME, new RecordHeaders()));
         context.setTime(1L);
         store.put(hi, there);
-        assertThat(collector.collected().size(), equalTo(1));
-        assertThat(collector.collected().get(0).headers(), is(notNullValue()));
+        assertEquals(1, collector.collected().size());
+        assertNotNull(collector.collected().get(0).headers());
         final Header versionHeader = collector.collected().get(0).headers().lastHeader(ChangelogRecordDeserializationHelper.CHANGELOG_VERSION_HEADER_KEY);
-        assertThat(versionHeader, is(notNullValue()));
-        assertThat(versionHeader.equals(ChangelogRecordDeserializationHelper.CHANGELOG_VERSION_HEADER_RECORD_CONSISTENCY), is(true));
+        assertNotNull(versionHeader);
+        assertTrue(versionHeader.equals(ChangelogRecordDeserializationHelper.CHANGELOG_VERSION_HEADER_RECORD_CONSISTENCY));
         final Header vectorHeader = collector.collected().get(0).headers().lastHeader(ChangelogRecordDeserializationHelper.CHANGELOG_POSITION_HEADER_KEY);
-        assertThat(vectorHeader, is(notNullValue()));
+        assertNotNull(vectorHeader);
         final Position position = PositionSerde.deserialize(ByteBuffer.wrap(vectorHeader.value()));
-        assertThat(position.getPartitionPositions(INPUT_TOPIC_NAME), is(notNullValue()));
-        assertThat(position.getPartitionPositions(INPUT_TOPIC_NAME), hasEntry(0, 100L));
+        assertNotNull(position.getPartitionPositions(INPUT_TOPIC_NAME));
+        assertEquals(100L, position.getPartitionPositions(INPUT_TOPIC_NAME).get(0));
 
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    public void shouldDelegateReadOnlyUncommittedToInner() {
+        final KeyValueStore<Bytes, byte[]> innerMock = mock(KeyValueStore.class);
+        final ChangeLoggingKeyValueBytesStore outer = new ChangeLoggingKeyValueBytesStore(innerMock);
+        final ReadOnlyKeyValueStore<Bytes, byte[]> view = mock(ReadOnlyKeyValueStore.class);
+        when(innerMock.readOnly(IsolationLevel.READ_UNCOMMITTED)).thenReturn(view);
+
+        assertSame(view, outer.readOnly(IsolationLevel.READ_UNCOMMITTED));
+        verify(innerMock).readOnly(IsolationLevel.READ_UNCOMMITTED);
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    public void shouldDelegateReadOnlyCommittedToInner() {
+        final KeyValueStore<Bytes, byte[]> innerMock = mock(KeyValueStore.class);
+        final ChangeLoggingKeyValueBytesStore outer = new ChangeLoggingKeyValueBytesStore(innerMock);
+        final ReadOnlyKeyValueStore<Bytes, byte[]> view = mock(ReadOnlyKeyValueStore.class);
+        when(innerMock.readOnly(IsolationLevel.READ_COMMITTED)).thenReturn(view);
+
+        assertSame(view, outer.readOnly(IsolationLevel.READ_COMMITTED));
+        verify(innerMock).readOnly(IsolationLevel.READ_COMMITTED);
     }
 
     private StreamsConfig streamsConfigMock() {
